--- a/index.html
+++ b/index.html
@@ -1,15 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Growth Mindset</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Understanding Growth Mindset</title>
+  <style>
+    /* GABUNGKAN STYLE DARI 'Useful Links' DI SINI */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #ffe6f2;
+      color: #333;
+    }
+    .container {
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 0.2em;
+      color: #d81b60;
+    }
+    p {
+      font-size: 1.1em;
+      margin-bottom: 1.5em;
+      color: #666;
+    }
+    iframe {
+      max-width: 100%;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: #ffffff;
+      border-top: 4px solid #dda0dd;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+      padding: 20px;
+      text-decoration: none;
+      color: inherit;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+    }
+    .icon {
+      font-size: 2.5em;
+      margin-bottom: 0.5em;
+      color: #ff69b4;
+    }
+    .title {
+      font-size: 1.2em;
+      margin-bottom: 0.4em;
+      font-weight: bold;
+    }
+    .desc {
+      font-size: 0.95em;
+      color: #555;
+      line-height: 1.4;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 15px 0;
+      background: #dda0dd;
+      color: white;
+      font-size: 0.9em;
+    }
+  </style>
 </head>
 <body>
-    <h1>Welcome to the Growth Mindset Website</h1>
-    <p>Follow us on Instagram for daily motivation and growth tips!</p>
-    <a href="https://www.instagram.com/riset_oevolve?igsh=cnk4N281NHY4amtn&utm_source=qr" target="_blank">
-        <button>Visit our Instagram</button>
-    </a>
+
+  <div class="container">
+    <h1>Understanding Growth Mindset</h1>
+    <p>Watch the video below to understand what a Growth Mindset is:</p>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/r0qpJxEhOP4"
+      title="What Having a Growth Mindset Actually Means" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+  </div>
+
+  <div class="container">
+    <h1>🔗 Useful Links</h1>
+    <p>Click any card below to open:</p>
+    <div class="grid">
+      <a class="card" href="https://linggg18.github.io/growth-mindset/index.html">
+        <div class="icon">🌐</div>
+        <div class="title">index.html</div>
+        <div class="desc">Main HTML page of Growth Mindset site.</div>
+      </a>
+      <a class="card" href="https://linggg18.github.io/growth-mindset/index.htm">
+        <div class="icon">🌐</div>
+        <div class="title">index.htm</div>
+        <div class="desc">Alternate index page (HTM extension).</div>
+      </a>
+      <a class="card" href="https://linggg18.github.io/growth-mindset/growth-mindset.html">
+        <div class="icon">📈</div>
+        <div class="title">growth-mindset.html</div>
+        <div class="desc">Deep dive into the Growth Mindset concept.</div>
+      </a>
+      <a class="card" href="https://github.com/Linggg18/growth-mindset">
+        <div class="icon">🐙</div>
+        <div class="title">GitHub Repository</div>
+        <div class="desc">Browse the source code and project files.</div>
+      </a>
+      <a class="card" href="https://linggg18.github.io/growth-mindset/video.html">
+        <div class="icon">🎥</div>
+        <div class="title">video.html</div>
+        <div class="desc">Watch the Growth Mindset video presentation.</div>
+      </a>
+      <a class="card" href="https://linggg18.github.io/growth-mindset/games/games.html">
+        <div class="icon">🎮</div>
+        <div class="title">Growth Mindset Games</div>
+        <div class="desc">Play games to boost your Growth Mindset!</div>
+      </a>
+    </div>
+  </div>
+
+  <footer>
+    Powered by Growth Mindset – Your path to a better you!
+  </footer>
+
 </body>
 </html>
