--- a/growth-mindset.html
+++ b/growth-mindset.html
@@ -2,13 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Understanding Growth Mindset</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #fff0f5; /* light pink */
+      color: #4b0082; /* dark purple */
+      line-height: 1.6;
+    }
+    header {
+      background-color: #dda0dd; /* light purple */
+      padding: 40px 20px;
+      text-align: center;
+      color: white;
+    }
+    header h1 {
+      font-size: 2.8em;
+      margin: 0;
+    }
+    .content {
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 20px;
+      background: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    .content h2 {
+      color: #d81b60; /* pink */
+      font-size: 1.8em;
+    }
+    .content p {
+      font-size: 1.1em;
+      color: #333;
+      margin-bottom: 20px;
+    }
+    iframe {
+      display: block;
+      margin: 0 auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #d8bfd8; /* thistle */
+      color: #4b0082;
+      font-size: 0.95em;
+    }
+  </style>
 </head>
 <body>
-  <h1>Understanding Growth Mindset</h1>
-  <p>Watch the video below to understand what a Growth Mindset is:</p>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/r0qpJxEhOP4" title="What Having a Growth Mindset Actually Means" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <header>
+    <h1>Understanding Growth Mindset</h1>
+  </header>
+
+  <div class="content">
+    <h2>🌱 What is a Growth Mindset?</h2>
+    <p>
+      A Growth Mindset is the belief that your abilities and intelligence can be developed through effort, learning, and persistence. 
+      People with this mindset see challenges and failures as opportunities to grow rather than signs of limitation.
+    </p>
+    <p>
+      This concept was introduced by psychologist Carol Dweck, who found that individuals with a growth mindset are more likely to achieve their goals because they keep trying—even when things get tough.
+    </p>
+    <p>
+      By adopting a Growth Mindset, you'll be more open to challenges, more resilient in the face of setbacks, and better equipped to become the best version of yourself.
+    </p>
+
+    <h2>🎥 Watch the video below:</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/r0qpJxEhOP4" title="What Having a Growth Mindset Actually Means" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+  <footer>
+    🌸 With a Growth Mindset, every day is a chance to improve!
+  </footer>
+
 </body>
 </html>
