--- a/index.htm
+++ b/index.htm
@@ -1,27 +1,107 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>成長心態網站</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Understanding Growth Mindset</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap');
+
+    body {
+      margin: 0;
+      font-family: 'Quicksand', sans-serif;
+      background: linear-gradient(to right, #ffe4ec, #f3e5f5);
+      color: #4b0082;
+      line-height: 1.6;
+    }
+
+    header {
+      background: linear-gradient(to right, #d291bc, #f3a1e2);
+      text-align: center;
+      padding: 60px 20px 30px;
+      color: white;
+      border-bottom-left-radius: 30px;
+      border-bottom-right-radius: 30px;
+    }
+
+    header h1 {
+      font-size: 3em;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.2em;
+      margin: 0 auto;
+      max-width: 700px;
+      color: #fffdfd;
+    }
+
+    .content {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 30px;
+      background: #ffffff;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+
+    .content h2 {
+      color: #d81b60;
+      font-size: 1.8em;
+    }
+
+    .content p {
+      font-size: 1.1em;
+      color: #333;
+      margin-bottom: 20px;
+    }
+
+    iframe {
+      display: block;
+      margin: 20px auto;
+      border-radius: 12px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.2);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #f8bbd0;
+      color: #4b0082;
+      font-size: 1em;
+      margin-top: 40px;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+    }
+  </style>
 </head>
 <body>
-    <h1>成長心態網站</h1>
-    <p>姓名: 曾惠玲</p>
-    <p>科系: 華語文學系</p>
-    <p>學校: 國立聯合大學</p>
-    <p>學號: U1243002</p>
 
-    <h2>網站簡介</h2>
-    <p>這個網站的目的是分享成長心態的概念與技巧，幫助人們勇敢面對挑戰，並從失敗中學習成長。</p>
+  <header>
+    <h1>Understanding Growth Mindset</h1>
+    <p>✨ Welcome to this website! Here, you’ll discover how a Growth Mindset can help you grow, learn, and thrive in everything you do. Let’s unlock your full potential together! 💪🌟</p>
+  </header>
 
-    <h2>Instagram</h2>
-    <p>請關注我們的Instagram，獲取更多激勵性內容: <a href="https://www.instagram.com/riset_oevolve" target="_blank">riset_oevolve</a></p>
+  <div class="content">
+    <h2>🌱 What is a Growth Mindset?</h2>
+    <p>
+      A Growth Mindset is the belief that your abilities and intelligence can be developed through effort, learning, and persistence.
+      Instead of seeing failures as setbacks, people with a growth mindset see them as opportunities to grow.
+    </p>
+    <p>
+      This concept was introduced by psychologist Carol Dweck. She found that individuals with a growth mindset are more likely to keep trying and achieve their goals—even when things get tough.
+    </p>
+    <p>
+      When you adopt a Growth Mindset, you become more open to challenges, more confident in learning from mistakes, and more motivated to improve every day.
+    </p>
 
-    <h2>GitHub 倉庫</h2>
-    <p>這個網站的原始代碼可以在GitHub上找到: <a href="https://github.com/Linggg18/growth-mindset" target="_blank">成長心態 GitHub</a></p>
+    <h2>🎥 Watch the video below:</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/r0qpJxEhOP4" title="What Having a Growth Mindset Actually Means" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
 
-    <h2>PowerPoint Presentation</h2>
-    <p>點擊此處查看我的 PPT: <a href="https://www.canva.com/design/DAGjlOJBIDA/ax5OrpLyrt9dEQfNUvg8rA/edit?utm_content=DAGjlOJBIDA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">成長心態 PPT</a></p>
+  <footer>
+    🌸 Remember: Every step forward is a step toward your dreams. Keep growing!
+  </footer>
+
 </body>
 </html>
