--- a/index.html
+++ b/index.html
@@ -5,73 +5,91 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Understanding Growth Mindset</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;600&display=swap');
 
     body {
       margin: 0;
       font-family: 'Quicksand', sans-serif;
-      background: linear-gradient(to right, #ffe4ec, #f3e5f5);
+      background: linear-gradient(135deg, #ffe4ec, #e1bee7);
       color: #4b0082;
-      line-height: 1.6;
     }
 
     header {
-      background: linear-gradient(to right, #d291bc, #f3a1e2);
-      text-align: center;
-      padding: 60px 20px 30px;
+      background: #f06292;
       color: white;
-      border-bottom-left-radius: 30px;
-      border-bottom-right-radius: 30px;
+      padding: 60px 20px 30px;
+      text-align: center;
+      border-bottom-left-radius: 40px;
+      border-bottom-right-radius: 40px;
     }
 
     header h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
+      font-family: 'Pacifico', cursive;
+      font-size: 3.5em;
+      margin: 0;
     }
 
     header p {
       font-size: 1.2em;
-      margin: 0 auto;
       max-width: 700px;
-      color: #fffdfd;
+      margin: 20px auto 0;
     }
 
     .content {
       max-width: 900px;
       margin: 40px auto;
-      padding: 30px;
-      background: #ffffff;
+      background: #fff;
       border-radius: 20px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      padding: 30px;
     }
 
     .content h2 {
       color: #d81b60;
       font-size: 1.8em;
+      margin-bottom: 10px;
     }
 
     .content p {
       font-size: 1.1em;
-      color: #333;
       margin-bottom: 20px;
+      color: #333;
     }
 
-    iframe {
-      display: block;
-      margin: 20px auto;
-      border-radius: 12px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.2);
+    .links {
+      margin-top: 30px;
+    }
+
+    .links h3 {
+      color: #d81b60;
+      font-size: 1.5em;
+      margin-bottom: 10px;
+    }
+
+    .links ul {
+      list-style-type: '🌟 ';
+      padding-left: 20px;
+    }
+
+    .links a {
+      text-decoration: none;
+      color: #6a1b9a;
+      font-weight: 600;
+    }
+
+    .links a:hover {
+      text-decoration: underline;
+      color: #ab47bc;
     }
 
     footer {
       text-align: center;
-      padding: 20px;
       background: #f8bbd0;
-      color: #4b0082;
+      padding: 25px;
       font-size: 1em;
-      margin-top: 40px;
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
+      margin-top: 40px;
     }
   </style>
 </head>
@@ -79,28 +97,35 @@
 
   <header>
     <h1>Understanding Growth Mindset</h1>
-    <p>✨ Welcome to this website! Here, you’ll discover how a Growth Mindset can help you grow, learn, and thrive in everything you do. Let’s unlock your full potential together! 💪🌟</p>
+    <p>✨ Welcome to this colorful corner of the web! Here, you'll learn how to grow, improve, and face challenges with courage and positivity! 💪🌈</p>
   </header>
 
   <div class="content">
     <h2>🌱 What is a Growth Mindset?</h2>
     <p>
-      A Growth Mindset is the belief that your abilities and intelligence can be developed through effort, learning, and persistence.
-      Instead of seeing failures as setbacks, people with a growth mindset see them as opportunities to grow.
+      A Growth Mindset is the belief that your abilities and intelligence can be developed through effort, learning, and persistence. People with a growth mindset don’t fear failure—they see it as a learning opportunity.
     </p>
     <p>
-      This concept was introduced by psychologist Carol Dweck. She found that individuals with a growth mindset are more likely to keep trying and achieve their goals—even when things get tough.
+      This term was introduced by psychologist Carol Dweck, who showed that people who believe they can improve tend to reach higher goals and become more resilient.
     </p>
     <p>
-      When you adopt a Growth Mindset, you become more open to challenges, more confident in learning from mistakes, and more motivated to improve every day.
+      So, let’s build a mindset that loves learning, embraces challenges, and grows stronger every day!
     </p>
 
-    <h2>🎥 Watch the video below:</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/r0qpJxEhOP4" title="What Having a Growth Mindset Actually Means" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="links">
+      <h3>🔗 Useful Links</h3>
+      <ul>
+        <li><a href="https://www.mindsetworks.com" target="_blank">MindsetWorks – Growth Mindset Resources</a></li>
+        <li><a href="https://www.edutopia.org/article/5-strategies-help-students-develop-growth-mindset" target="_blank">Edutopia – Strategies for Growth Mindset</a></li>
+        <li><a href="https://www.youtube.com/results?search_query=growth+mindset" target="_blank">YouTube – Growth Mindset Videos</a></li>
+        <!-- Tambahan link kamu di bawah -->
+        <li><a href="https://linggg18.github.io/growth-mindset/links.html" target="_blank">My Useful Growth Mindset Links</a></li>
+      </ul>
+    </div>
   </div>
 
   <footer>
-    🌸 Remember: Every step forward is a step toward your dreams. Keep growing!
+    🌸 With a growth mindset, every step forward is a small victory. Keep blooming!
   </footer>
 
 </body>
