--- a/index.htm
+++ b/index.htm
@@ -1,107 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Understanding Growth Mindset</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap');
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Growth Mindset Website</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #ffe4ec, #e1bee7);
+            color: #4b0082;
+        }
 
-    body {
-      margin: 0;
-      font-family: 'Quicksand', sans-serif;
-      background: linear-gradient(to right, #ffe4ec, #f3e5f5);
-      color: #4b0082;
-      line-height: 1.6;
-    }
+        header {
+            background: #f06292;
+            color: white;
+            padding: 50px;
+            text-align: center;
+            border-bottom-left-radius: 40px;
+            border-bottom-right-radius: 40px;
+        }
 
-    header {
-      background: linear-gradient(to right, #d291bc, #f3a1e2);
-      text-align: center;
-      padding: 60px 20px 30px;
-      color: white;
-      border-bottom-left-radius: 30px;
-      border-bottom-right-radius: 30px;
-    }
+        header h1 {
+            font-size: 3em;
+            margin: 0;
+        }
 
-    header h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
-    }
+        header p {
+            font-size: 1.2em;
+            margin-top: 10px;
+        }
 
-    header p {
-      font-size: 1.2em;
-      margin: 0 auto;
-      max-width: 700px;
-      color: #fffdfd;
-    }
+        h2 {
+            color: #d81b60;
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
 
-    .content {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 30px;
-      background: #ffffff;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    }
+        p {
+            font-size: 1.1em;
+            margin-bottom: 20px;
+            line-height: 1.6;
+            color: #333;
+        }
 
-    .content h2 {
-      color: #d81b60;
-      font-size: 1.8em;
-    }
+        a {
+            text-decoration: none;
+            color: #6a1b9a;
+            font-weight: bold;
+        }
 
-    .content p {
-      font-size: 1.1em;
-      color: #333;
-      margin-bottom: 20px;
-    }
+        a:hover {
+            text-decoration: underline;
+            color: #ab47bc;
+        }
 
-    iframe {
-      display: block;
-      margin: 20px auto;
-      border-radius: 12px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.2);
-    }
+        .container {
+            max-width: 800px;
+            margin: 40px auto;
+            background: white;
+            border-radius: 20px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+        }
 
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #f8bbd0;
-      color: #4b0082;
-      font-size: 1em;
-      margin-top: 40px;
-      border-top-left-radius: 20px;
-      border-top-right-radius: 20px;
-    }
-  </style>
+        footer {
+            background: #f8bbd0;
+            color: #4b0082;
+            text-align: center;
+            padding: 25px;
+            font-size: 1.2em;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
+            margin-top: 40px;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        .highlight {
+            color: #d81b60;
+            font-weight: bold;
+        }
+
+        .links {
+            margin-top: 20px;
+            padding-top: 20px;
+            border-top: 2px solid #f06292;
+        }
+
+        .links a {
+            color: #6a1b9a;
+        }
+    </style>
 </head>
 <body>
 
-  <header>
-    <h1>Understanding Growth Mindset</h1>
-    <p>✨ Welcome to this website! Here, you’ll discover how a Growth Mindset can help you grow, learn, and thrive in everything you do. Let’s unlock your full potential together! 💪🌟</p>
-  </header>
+    <header>
+        <h1>Growth Mindset Website</h1>
+        <p>Welcome to my website, let's explore the growth mindset together!</p>
+    </header>
 
-  <div class="content">
-    <h2>🌱 What is a Growth Mindset?</h2>
-    <p>
-      A Growth Mindset is the belief that your abilities and intelligence can be developed through effort, learning, and persistence.
-      Instead of seeing failures as setbacks, people with a growth mindset see them as opportunities to grow.
-    </p>
-    <p>
-      This concept was introduced by psychologist Carol Dweck. She found that individuals with a growth mindset are more likely to keep trying and achieve their goals—even when things get tough.
-    </p>
-    <p>
-      When you adopt a Growth Mindset, you become more open to challenges, more confident in learning from mistakes, and more motivated to improve every day.
-    </p>
+    <div class="container">
+        <h2>Personal Information</h2>
+        <p><strong>Name:</strong> Velling 曾惠玲</p>
+        <p><strong>Major:</strong> Chinese Language and Literature</p>
+        <p><strong>University:</strong> National United University</p>
+        <p><strong>Student ID:</strong> U1243002</p>
 
-    <h2>🎥 Watch the video below:</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/r0qpJxEhOP4" title="What Having a Growth Mindset Actually Means" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
+        <h2>Website Introduction</h2>
+        <p>This website aims to share the concept and techniques of growth mindset, helping people face challenges bravely and learn from failures to grow.</p>
 
-  <footer>
-    🌸 Remember: Every step forward is a step toward your dreams. Keep growing!
-  </footer>
+        <h2>Instagram</h2>
+        <p>Follow our Instagram for more motivational content: 
+            <a href="https://www.instagram.com/riset_oevolve" target="_blank">riset_oevolve</a>
+        </p>
+
+        <h2>GitHub Repository</h2>
+        <p>The source code for this website can be found on GitHub: 
+            <a href="https://github.com/Linggg18/growth-mindset" target="_blank">Growth Mindset GitHub</a>
+        </p>
+
+        <h2>PowerPoint Presentation</h2>
+        <p>Click here to view my PPT: 
+            <a href="https://www.canva.com/design/DAGjlOJBIDA/ax5OrpLyrt9dEQfNUvg8rA/edit?utm_content=DAGjlOJBIDA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Growth Mindset PPT</a>
+        </p>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Growth Mindset Website. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
