--- a/video.html
+++ b/video.html
@@ -2,68 +2,159 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Educational Videos: Growth Mindset</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Growth Mindset Website</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #f0f8ff, #e6f7ff);
-      color: #333;
-      padding: 20px;
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #ffe4ec, #e1bee7);
+      color: #4b0082;
     }
-    h1 {
+
+    header {
+      background: #f06292;
+      color: white;
+      padding: 50px;
       text-align: center;
-      color: #2c3e50;
+      border-bottom-left-radius: 40px;
+      border-bottom-right-radius: 40px;
     }
-    .video-grid {
+
+    header h1 {
+      font-size: 3em;
+      margin: 0;
+    }
+
+    header p {
+      font-size: 1.2em;
+      margin-top: 10px;
+    }
+
+    h2 {
+      color: #d81b60;
+      font-size: 2em;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.1em;
+      margin-bottom: 20px;
+      line-height: 1.6;
+      color: #333;
+    }
+
+    a {
+      text-decoration: none;
+      color: #6a1b9a;
+      font-weight: bold;
+    }
+
+    a:hover {
+      text-decoration: underline;
+      color: #ab47bc;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+    }
+
+    footer {
+      background: #f8bbd0;
+      color: #4b0082;
+      text-align: center;
+      padding: 25px;
+      font-size: 1.2em;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+      margin-top: 40px;
+    }
+
+    .video-section {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
       gap: 20px;
       margin-top: 30px;
     }
-    .video-item {
-      background: #ffffff;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      padding: 10px;
-    }
-    .video-item iframe {
+
+    iframe {
       width: 100%;
       height: 200px;
       border: none;
-      border-radius: 10px;
-    }
-    .caption {
-      text-align: center;
-      margin-top: 10px;
-      font-weight: bold;
-      color: #1a73e8;
+      border-radius: 12px;
     }
   </style>
 </head>
 <body>
-  <h1>🎥 Educational Videos: Growth Mindset</h1>
-  <div class="video-grid">
-    <div class="video-item">
-      <iframe src="https://www.youtube.com/embed/r0qpJxEhOP4" allowfullscreen></iframe>
-      <div class="caption">What Having a Growth Mindset Actually Means</div>
-    </div>
-    <div class="video-item">
-      <iframe src="https://www.youtube.com/embed/M1CHPnZfFmU" allowfullscreen></iframe>
-      <div class="caption">Growth Mindset vs. Fixed Mindset</div>
-    </div>
-    <div class="video-item">
-      <iframe src="https://www.youtube.com/embed/75GFzikmRY0" allowfullscreen></iframe>
-      <div class="caption">Introduction to Growth Mindset</div>
-    </div>
-    <div class="video-item">
-      <iframe src="https://www.youtube.com/embed/hiiEeMN7vbQ" allowfullscreen></iframe>
-      <div class="caption">Developing a Growth Mindset with Carol Dweck</div>
-    </div>
-    <div class="video-item">
-      <iframe src="https://www.youtube.com/embed/2zrtHt3bBmQ" allowfullscreen></iframe>
-      <div class="caption">Growth Mindset for Kids</div>
-    </div>
+
+<header>
+  <h1>Growth Mindset Website</h1>
+  <p>Welcome to my website, let's explore the growth mindset together!</p>
+</header>
+
+<div class="container">
+  <h2>Personal Information</h2>
+  <p><strong>Name:</strong> Velling 曾惠玲</p>
+  <p><strong>Major:</strong> Chinese Language and Literature</p>
+  <p><strong>University:</strong> National United University</p>
+  <p><strong>Student ID:</strong> U1243002</p>
+
+  <h2>Website Introduction</h2>
+  <p>This website aims to share the concept and techniques of growth mindset, helping people face challenges bravely and learn from failures to grow.</p>
+
+  <h2>Instagram</h2>
+  <p>Follow our Instagram for more motivational content: 
+    <a href="https://www.instagram.com/riset_oevolve" target="_blank">riset_oevolve</a>
+  </p>
+
+  <h2>GitHub Repository</h2>
+  <p>The source code for this website can be found on GitHub: 
+    <a href="https://github.com/Linggg18/growth-mindset" target="_blank">Growth Mindset GitHub</a>
+  </p>
+
+  <h2>PowerPoint Presentation</h2>
+  <p>Click here to view my PPT: 
+    <a href="https://www.canva.com/design/DAGjlOJBIDA/ax5OrpLyrt9dEQfNUvg8rA/edit?utm_content=DAGjlOJBIDA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Growth Mindset PPT</a>
+  </p>
+
+  <h2>Growth Mindset Videos</h2>
+  <div class="video-section">
+    <iframe src="https://www.youtube.com/embed/KUWn_TJTrnU" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/75GFzikmRY0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/ElVUqv0v1EE" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/Yl9TVbAal5s" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/2zrtHt3bBmQ" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/M1CHPnZfFmU" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/w2dGAgkTzUU" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/hiiEeMN7vbQ" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/zLYECIjmnQs" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/RwlhUcSGqgs" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/HwDopA2pE_c" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/2zrtHt3bBmQ" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/vzKryaN44ss" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/2XrkLxqt5Nw" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/V-mBqk0ztfI" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/WN2VvyyoYIY" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/I_8Qy2lZj6s" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/jgfu1txBKVY" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/NWv1VdDeoRY" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/HOHgwcPjlVM" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/NWv1VdDeoRY" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/ZJ9c53v79tg" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/F0K1BsZdaZk" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/VbVgTdJpGZE" allowfullscreen></iframe>
   </div>
+</div>
+
+<footer>
+  <p>&copy; 2025 Growth Mindset Website. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
