--- a/video.html
+++ b/video.html
@@ -76,18 +76,29 @@
       margin-top: 40px;
     }
 
-    .video-section {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
+    .video-gallery {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
     }
 
-    iframe {
-      width: 100%;
+    .video-row {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin-bottom: 30px;
+    }
+
+    .video-row iframe {
+      width: 32%;
       height: 200px;
       border: none;
-      border-radius: 12px;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    }
+
+    footer p {
+      margin: 0;
     }
   </style>
 </head>
@@ -122,33 +133,58 @@
   <p>Click here to view my PPT: 
     <a href="https://www.canva.com/design/DAGjlOJBIDA/ax5OrpLyrt9dEQfNUvg8rA/edit?utm_content=DAGjlOJBIDA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Growth Mindset PPT</a>
   </p>
+</div>
 
-  <h2>Growth Mindset Videos</h2>
-  <div class="video-section">
+<div class="video-gallery">
+  <h2 style="text-align:center;">Motivational Videos</h2>
+
+  <!-- Repeat this row block for every 3 videos (8 times total) -->
+  <div class="video-row">
+    <iframe src="https://www.youtube.com/embed/Y6hz_s2XIAU" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/2zrp-kYIIOI" allowfullscreen></iframe>
     <iframe src="https://www.youtube.com/embed/KUWn_TJTrnU" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/75GFzikmRY0" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/ElVUqv0v1EE" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/Yl9TVbAal5s" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/2zrtHt3bBmQ" allowfullscreen></iframe>
+  </div>
+
+  <div class="video-row">
     <iframe src="https://www.youtube.com/embed/M1CHPnZfFmU" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/w2dGAgkTzUU" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/r1B4t1Rz5ZM" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/E8N3I2J3Jeo" allowfullscreen></iframe>
+  </div>
+
+  <div class="video-row">
     <iframe src="https://www.youtube.com/embed/hiiEeMN7vbQ" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/UNP03fDSj1U" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/75okexRzWMk" allowfullscreen></iframe>
+  </div>
+
+  <div class="video-row">
     <iframe src="https://www.youtube.com/embed/zLYECIjmnQs" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/RwlhUcSGqgs" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/HwDopA2pE_c" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/2zrtHt3bBmQ" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/vzKryaN44ss" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/2XrkLxqt5Nw" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/V-mBqk0ztfI" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/WN2VvyyoYIY" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/I_8Qy2lZj6s" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/jgfu1txBKVY" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/NWv1VdDeoRY" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/HOHgwcPjlVM" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/NWv1VdDeoRY" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/ZJ9c53v79tg" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/F0K1BsZdaZk" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/VbVgTdJpGZE" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/lU3R0ot18bg" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/O96fE1E-rf8" allowfullscreen></iframe>
+  </div>
+
+  <div class="video-row">
+    <iframe src="https://www.youtube.com/embed/BwFOwyoH-3g" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/2z6kPZ6uFSs" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/g-jwWYX7Jlo" allowfullscreen></iframe>
+  </div>
+
+  <div class="video-row">
+    <iframe src="https://www.youtube.com/embed/3sK3wJAxGfs" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/2z3gYTwJ3lU" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/rRrUJVcRZmI" allowfullscreen></iframe>
+  </div>
+
+  <div class="video-row">
+    <iframe src="https://www.youtube.com/embed/q7vFqNNOyl4" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/LW6RQv8Nc64" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/miPYLJI247g" allowfullscreen></iframe>
+  </div>
+
+  <div class="video-row">
+    <iframe src="https://www.youtube.com/embed/V1laSvjRCXM" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/OkzxgqcCkWw" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/ZqM6z8V09xg" allowfullscreen></iframe>
   </div>
 </div>
 
