--- a/video.html
+++ b/video.html
@@ -2,128 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Growth Mindset Website</title>
+    <title>Growth Mindset Videos</title>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #ffe4ec, #e1bee7);
-            color: #4b0082;
-        }
-
-        header {
-            background: #f06292;
-            color: white;
-            padding: 50px;
-            text-align: center;
-            border-bottom-left-radius: 40px;
-            border-bottom-right-radius: 40px;
-        }
-
-        header h1 {
-            font-size: 3em;
-            margin: 0;
-        }
-
-        header p {
-            font-size: 1.2em;
-            margin-top: 10px;
+        .container {
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
         }
 
         h2 {
-            color: #d81b60;
-            font-size: 2em;
-            margin-bottom: 10px;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 40px auto;
-            background: white;
-            border-radius: 20px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-            padding: 30px;
+            text-align: center;
+            margin-bottom: 20px;
         }
 
         .video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            display: flex;
+            flex-wrap: wrap;
             gap: 20px;
-            margin-top: 30px;
+            justify-content: center;
         }
 
         .video-grid iframe {
-            width: 100%;
-            aspect-ratio: 16 / 9;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            width: 45%;
+            height: 250px;
         }
 
-        footer {
-            background: #f8bbd0;
-            color: #4b0082;
-            text-align: center;
-            padding: 25px;
-            font-size: 1.2em;
-            border-top-left-radius: 20px;
-            border-top-right-radius: 20px;
-            margin-top: 40px;
-        }
-
-        footer p {
-            margin: 0;
+        @media (max-width: 768px) {
+            .video-grid iframe {
+                width: 100%;
+            }
         }
     </style>
 </head>
 <body>
+    <div class="container">
+        <h2>Growth Mindset Videos</h2>
+        <div class="video-grid">
+            <iframe src="https://www.youtube.com/embed/2zrtHt3bBmQ" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/M1CHPnZfFmU?si=X3kFisYyTP0Fkvz4" frameborder="0" allowfullscreen></iframe>
 
-<header>
-    <h1>Growth Mindset Website</h1>
-    <p>Welcome to my website, let's explore the growth mindset together!</p>
-</header>
+            <iframe src="https://www.youtube.com/embed/75GFzikmRY0?si=ofeE2I2uR6Z7jvd-" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/KUWn_TJTrnU?si=u0y_PvvW5sywc5Zg" frameborder="0" allowfullscreen></iframe>
 
-<div class="container">
-    <h2>Growth Mindset Videos</h2>
-    <div class="video-grid">
-        <iframe src="https://www.youtube.com/embed/2zrtHt3bBmQ" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/M1CHPnZfFmU" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/75GFzikmRY0" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/5tSTk1083VY?si=YO16hfG5VUxWPAJE" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/M1CHPnZfFmU?si=V95KAeMtqTPODAsH" frameborder="0" allowfullscreen></iframe>
 
-        <iframe src="https://www.youtube.com/embed/KUWn_TJTrnU" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/5tSTk1083VY" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/8iW5jIv9hvY" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/JfdoJxPjp1k?si=q1ON0Pb1wlw9gc2W" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/rUJkbWNnNy4?si=fYKw7dGTMEiLty4a" frameborder="0" allowfullscreen></iframe>
 
-        <iframe src="https://www.youtube.com/embed/HwP2XDsGUxQ" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/ySdjwk0A3c8" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/OnrT0Fdum-M" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/jYNG5XhrvGQ?si=AlFMj7LmBNALWpeF" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/hiiEeMN7vbQ?si=xXCfQMf-mTIXdsXQ" frameborder="0" allowfullscreen></iframe>
 
-        <iframe src="https://www.youtube.com/embed/vjE0E-Z0co8" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/kXhbtCcmsyQ" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/WaUqqK3p3d4" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/rf8FX2sI3gU?si=xRjRD7Z6uFQ5tjFG" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/ElVUqv0v1EE?si=dN5ze4dSYQHZcPPP" frameborder="0" allowfullscreen></iframe>
 
-        <iframe src="https://www.youtube.com/embed/qaeFnxSfSC4" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/V4U7rz7tZ-M" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/ELpfYCZa87g" frameborder="0" allowfullscreen></iframe>
-
-        <iframe src="https://www.youtube.com/embed/4n1l4uOkhOQ" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/XpYz-q1lxu8" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/ZR8i2NYChXo" frameborder="0" allowfullscreen></iframe>
-
-        <iframe src="https://www.youtube.com/embed/o8BkzvP19v4" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/Wh0OS4MrN3Q" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/gtmMMRuiAZU" frameborder="0" allowfullscreen></iframe>
-
-        <iframe src="https://www.youtube.com/embed/5qkzwG2M45Q" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/falHoOEUFz0" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/iAcP9UdNN2k" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/aNHas97iE78?si=K-2Th5dIBM1tltHK" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/xWj-adZemk4?si=lhpFVguhGKureG85" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
-</div>
-
-<footer>
-    <p>&copy; 2025 Growth Mindset Website. All rights reserved.</p>
-</footer>
-
 </body>
 </html>
