--- a/video.html
+++ b/video.html
@@ -79,6 +79,20 @@
         .button:hover {
             background-color: #ff80bf;
         }
+
+        /* Flower sticker styles */
+        .flower-sticker {
+            position: absolute;
+            top: 10%;
+            right: 10%;
+        }
+
+        .flower-sticker img {
+            width: 100px;
+            height: auto;
+            transform: rotate(-10deg);
+            opacity: 0.7;
+        }
     </style>
 </head>
 <body>
@@ -113,6 +127,11 @@
         </div>
         
         <a href="#" class="button">Explore More Videos</a>
+
+        <!-- Flower Sticker -->
+        <div class="flower-sticker">
+            <img src="https://example.com/flower-sticker.png" alt="Flower Sticker">
+        </div>
     </div>
 </body>
 </html>
